# BPOD

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: apod.rs  database.rs  main.rs
backend/src/scraping/: apod_thumbnail.rs  error.rs  mod.rs
backend/src/scraping/apod_data/: mod.rs
backend/src/scraping/apod_data/getter/: description.rs  img_url.rs  meta.rs  mod.rs  title.rs  utils.rs
backend/src/scraping/apod_data/normalization/: mod.rs  text.rs  url.rs
backend/src/scraping/apod_data/normalization/html_tag/: mod.rs  opening_a_tag.rs
backend/src/scraping/apod_data/normalization/text/: check.rs  mod.rs  regexes.rs
backend/src/scraping/apod_data/normalization/text/fix/: mod.rs  replacement.rs
backend/src/scraping/apod_data/normalization/text/fix/html_tag/: check.rs  detect.rs  mod.rs
backend/src/scraping/apod_data/normalization/text/fix/html_tag/fix/: mod.rs
backend/src/scraping/apod_data/normalization/text/fix/html_tag/fix/opening_a_tag/: extract.rs  mod.rs  regexes.rs
backend/src/scraping/apod_data/normalization/url/: check.rs  mod.rs
backend/src/scraping/apod_data/translation/: mod.rs
